<resources>
    <string name="language_tag">zh_cn</string>
    <string name="app_name">每日手帐</string>
    <string name="version">版本V2.0.5</string>
    <string name="isee">我知道了</string>
    <string name="version_with">此版本为正式版</string>
    <string name="authorinfo">原软件作者:好读游独\n</string>
    <string name="authorinfo_rex">现维护团队为 DailyNotes Team by ReX</string>
    <string name="aboutnewvewsion">新版特性:\n优化动画体验\n支持“中文繁体”\n更新贴纸\n添加天气和标语\n接入小天才shareapi\n更新模板\n可以修改字体颜色\n添加自定义心情\n修复已知bug\n更新 \\彩蛋/</string>
    <string name="about_title">关于软件</string>
    <string name="github_info">本软件现已在Github上进行开源，欢迎给个Star~\n仓库网址:\nhttps://github.com/HaoduyouduStudio/DailyNotes\n隐私政策:https://nextsay.cn/Privacy.html\n</string>
    <string name="about_mubiaodacheng">恭喜达成目标！</string>
    <string name="about_caidan_tips">彩蛋：写完%d篇手帐再来找我,我们不见不散!</string>
    <string name="about_caidan_tips2">Tips：您使用的彩蛋已过时,为什么不去版本号中多点几下呢AWA</string>
    <string name="share_software_text">好用的宝贝，分享给你～</string>
    <string name="share_software_tips">《每日手帐》感谢您的支持与鼓励！</string>
    <string name="thank_for">*致谢美工\n感谢  颖琳、卡比、许祁颂、DonG、倪冰、Wick、娴静自然、Oroxi、老瑜、苏柒、二贼猫为软件添砖加瓦    (点我看看！)\n</string>
    <string name="qq_group">加入我们的反馈群吧！\nQQ群号:721731698\nTG群组:t.me/+lJx7PjmqQS05Mjc1</string>
    <string name="softwear_inf">手帐？我们这儿，专业的！\n</string>
    <string name="img_copyright">\n图片版权声明：\n本软件部分图片插画来自阿里巴巴矢量图标，如有侵权，请联系作者删除\n</string>v
    <string name="share_softwear_tips">好用？支持一下？</string>
    <string name="share_softwear_button">分享给好友</string>
    <string name="share_done">分享成功</string>
    <string name="share_fail">分享失败</string>
    <string name="caidan_tips_2">来看看我们的吉祥物吧!</string>
    <string name="share_caidan">发现一个小彩蛋～</string>
    <string name="model_not_support">当前机型不支持</string>
    <string name="error_code">错误码%d</string>
    <string name="ok">确认</string>
    <string name="cancel">取消</string>
    <string name="sel_template_title">点击选择模板</string>
    <string name="find_year">____年</string>
    <string name="find_month">__月</string>
    <string name="find_title">查找手帐</string>
    <string name="caidan_tips">获得彩蛋贴纸两张</string>
    <string name="sel_mood_title">与您今日心情最符合的是..</string>
    <string name="more_mood">&#160;更多表情</string>
    <string name="forgetpassword">-忘记密码-\n是否重设密码</string>
    <string name="forgetpassword_tips">3天后将自动解锁</string>
    <string name="enter_password">输入密码</string>
    <string name="enter_password_again">再次输入密码</string>
    <string name="enter_newpassword_again">再次输入新密码</string>
    <string name="enter_new_password">输入新密码</string>
    <string name="reset_password">重设密码</string>
    <string name="creation_failed">创建失败</string>
    <string name="original_password_error">原密码不正确</string>
    <string name="enter_original_password">输入原密码</string>
    <string name="modified_successfully">修改成功</string>
    <string name="setpassword_done">设置成功</string>
    <string name="two_password_notsame">两次密码不相同</string>
    <string name="forgetpassword_OK_tips">你设置的\"忘记密码\"功能已生效，已关闭密码</string>
    <string name="password_unlocked">已解锁</string>
    <string name="password_turned_off">已关闭密码</string>
    <string name="password_error">密码错误</string>
    <string name="system_error">系统错误</string>
    <string name="password_remaining_opportunities">密码错误\n还可尝试%d次</string>
    <string name="lastend_unlook_h">%d小时后自动解锁</string>
    <string name="lastend_unlook_m">%d分钟后自动解锁</string>
    <string name="lastend_unlook_s">%d秒后自动解锁</string>
    <string name="try_again_password_s">%d秒后再试</string>
    <string name="sel_mood_tips">您今天已经写过手帐了\n若想修改和删除,请到"管理手帐"界面操作哦</string>
    <string name="find_tips">您还未选择年份！</string>
    <string name="del_ok">删除成功</string>
    <string name="del_fail">删除失败</string>
    <string name="main_premissions_tips">需要同意所有权限才能正常使用哦～</string>
    <string name="loading">加载中</string>
    <string name="not_support">尚未支持</string>
    <string name="add_fail">添加失败</string>
    <string name="selmedia_loading">苦逼加载中</string>
    <string name="selmedia_max_record_count">只能添加%d个音频哦</string>
    <string name="selmedia_max_imgorvid_count">只能添加%d个视频或图片哦</string>
    <string name="opened">已开启</string>
    <string name="closed">已关闭</string>
    <string name="playing">正在播放</string>
    <string name="playback_complete">播放完成</string>
    <string name="cannotsave">保存失败</string>
    <string name="video">视频</string>
    <string name="record">录音</string>
    <string name="image">图片</string>
    <string name="nonemood">心情失踪啦！</string>
    <string name="click_recording">点击录音</string>
    <string name="recording_done">录音完成</string>
    <string name="click_stop_recording">点击停止</string>
    <string name="is_recording">正在录音</string>
    <string name="recordlast_s">还剩%d秒</string>
    <string name="recordlast_auto_s">%d秒后自动暂停</string>
    <string name="stickercount_exceed">贴纸最大数量不能超过%d个</string>
    <string name="change_by_weather">根据天气变化</string>
    <string name="city">城市</string>
    <string name="grassland">野营</string>
    <string name="wave">大海</string>
    <string name="shownotestip1">&#160;&#160;&#160;&#160;点击编辑文字</string>
    <string name="shownotestip2">&#160;&#160;点击添加多媒体</string>
    <string name="mascotyouyu">吉祥物游屿</string>
    <string name="click_edit">点击编辑</string>
    <string name="returnline">换行</string>
    <string name="tintcolor">调色</string>
    <string name="edit">编辑</string>
    <string name="share_notes">分享手帐</string>
    <string name="delete">删除</string>
    <string name="back">返回</string>
    <string name="more_moodtitle">更多表情</string>
    <string name="sk_size">大小</string>
    <string name="sk_angle">角度</string>
    <string name="sk_left">左</string>
    <string name="sk_right">右</string>
    <string name="sk_del"> 删除</string>
    <string name="takephoto">拍照</string>
    <string name="fromalbum">相册</string>
    <string name="takevideo">小视频</string>
    <string name="recordv">录音</string>
    <string name="safesetting">安全设置</string>
    <string name="password">密码</string>
    <string name="setpassowrdtips">开启密码可以保护你的手帐内容和隐私，防止被他人偷看，会在应用打开时要求输入</string>
    <string name="forgetpassword2">忘记密码</string>
    <string name="showfindtitle">搜索结果</string>
    <string name="recordtitle">点击录音或停止</string>
    <string name="moremoodhint">想说什么吗</string>
    <string name="custommood_title">自定义心情</string>
</resources>
