<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" 
    android:layout_height="match_parent"
    android:background="#121212">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <TextView
            android:textSize="18sp"
            android:typeface="sans"
            android:gravity="center"
            android:textColor="#BDBDBD"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:text="@string/forgetpassword" />
        <TextView
            android:textSize="15sp"
            android:typeface="sans"
            android:textColor="#888888"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/forgetpassword_tips" />
    </LinearLayout>
    <RelativeLayout
        android:layout_gravity="bottom"
        android:layout_width="match_parent" 
        android:layout_height="wrap_content" 
        android:layout_marginTop="22dp">
        <LinearLayout 
            android:orientation="vertical" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginStart="5dp">
            <ImageView 
                android:id="@+id/cancel" 
                android:background="@drawable/btn_bg_gray_round" 
                android:layout_width="60.0dip" 
                android:layout_height="60.0dip" 
                android:src="@drawable/cancel" />
            <TextView
                android:textColor="#BDBDBD"
                android:textSize="14sp" 
                android:typeface="sans" 
                android:layout_gravity="center"
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"
                android:text="@string/cancel" />
        </LinearLayout>
        <LinearLayout 
            android:orientation="vertical"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_alignParentEnd="true">
            <ImageView
                android:id="@+id/start"
                android:background="@drawable/btn_bg_green_round" 
                android:layout_width="60.0dip"
                android:layout_height="60.0dip" 
                android:src="@drawable/sure" />
            <TextView
                android:textColor="#BDBDBD"
                android:textSize="14sp" 
                android:typeface="sans"
                android:layout_gravity="center"
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                android:text="@string/ok" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>