<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#0E0E0E"
            tools:context=".Settingpage">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/f_title">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="6dp"
                    android:text="@string/safesetting"
                    android:textColor="#4dd865"
                    android:textSize="16sp" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:src="@mipmap/righttop_circle"/>

            </FrameLayout>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/openpassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/setting_item"
            android:layout_marginBottom="5dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center_vertical"
                    android:src="@mipmap/suo"/>
                <LinearLayout
                    android:layout_marginStart="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:textSize="16sp"
                        android:text="@string/password"
                        android:textColor="@drawable/textcolor_selector"/>
                    <TextView
                        android:id="@+id/textofisopen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@drawable/textcolor_selector"
                        android:text="@string/closed"/>
                </LinearLayout>
            </LinearLayout>
            <com.zcw.togglebutton.ToggleButton
                android:id="@+id/isopenpassword"
                android:layout_gravity="end|center_vertical"
                android:layout_width="35dp"
                android:layout_height="20dp"
                android:layout_marginEnd="1dp">
            </com.zcw.togglebutton.ToggleButton>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/changepassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/setting_item">
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/reset_password"
                android:layout_marginStart="2dp"
                android:textColor="@drawable/textcolor_selector"/>
            <ImageView
                android:layout_gravity="end|center_vertical"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="1dp"
                android:src="@mipmap/tonext"/>
        </FrameLayout>
        <FrameLayout
            android:id="@+id/dontremenberpass"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/setting_item">
            <TextView
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/forgetpassword2"
                android:layout_marginStart="2dp"
                android:textColor="@drawable/textcolor_selector"/>
            <ImageView
                android:layout_gravity="end|center_vertical"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="1dp"
                android:src="@mipmap/tonext"/>
        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="10dp"
            android:textColor="#999999"
            android:textSize="13sp"
            android:text="@string/setpassowrdtips"/>
    </LinearLayout>
</ScrollView>